--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,80 @@
+:root {
+}
+
+#grad {
+  background-image: linear-gradient(red, yellow);
+}
+
 body {
-  /* color: white; */
+  font-family: 'lato',sans-serif;
+  background-image: linear-gradient(#851835, #000000);
+  color: white;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin-top: 24px;
+}
+
+.hero-img {
+  border-radius: 50%;
+  border: 2px solid var(--pine);
+  box-shadow: 8px 16px 32px 0px var(--shadow);
+  height: 300px;
+  margin-bottom: 32px;
+  overflow: hidden;
+  width: 300px;
+}
+
+img {
+  max-height: 100%;
+}
+
+h1 {
+  font-size: 2rem;
+  line-height: 1.2;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+h2 {
+  color: var(--paragraph);
+  font-family: var(--montserrat);
+  margin-top: 16px;
+  text-align: center;
+  width: 80%;
 }
 
 .logos {
   color: red;
+}
+
+.logos a {
+  padding: 0;
+  text-align: center;
+}
+
+
+
+
+
+
+@media screen and (min-width: 738px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .hero a {
+    display: flex;
+    justify-content: space-evenly;
+    width: 582px;
+  }
+
+  h2 {
+    width: 582px;
+  }
 }
