--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,25 @@
 :root {
 }
 
-#grad {
-  background-image: linear-gradient(red, yellow);
+body,
+h1,
+h2,
+p,
+ul[class],
+ol[class],
+li {
+  margin: 0;
 }
 
 body {
   font-family: 'lato',sans-serif;
-  background-image: linear-gradient(#851835, #000000);
+  background-image: linear-gradient(#851835, #851835, #000000, #000000);
   color: white;
+
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
 .hero {
@@ -41,21 +52,22 @@ h1 {
 }
 
 h2 {
-  color: var(--paragraph);
-  font-family: var(--montserrat);
   margin-top: 16px;
   text-align: center;
   width: 80%;
 }
 
-.logos {
-  color: red;
-}
-
-.logos a {
+.logos ul {
   padding: 0;
   text-align: center;
 }
+
+.logos li {
+  display: block;
+  margin-bottom: 8px;
+}
+
+
 
 
 
@@ -68,7 +80,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
   }
-  .hero a {
+  .hero ul {
     display: flex;
     justify-content: space-evenly;
     width: 582px;
